[package]
name = "otptool"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.72"
bardecoder = "0.4.2"
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
data-encoding = "2.4.0"
image = "0.24.6"
prost = "0.11.9"
url = "2.4.0"

[build-dependencies]
prost-build = "0.11.9"
