[package]
name = "otptool"
version = "0.1.1"
edition = "2021"
authors = ["Denis Hananein"]
description = "Simple tool to help you migrate your OTP secrets from Google Authenticator to another app."
license = "MIT"
homepage = "https://github.com/zloylos/otptool"


[dependencies]
anyhow = "1.0.76"
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
data-encoding = "2.4.0"
image = "0.24.7"
prost = "0.12.3"
rqrr = "0.6.0"
url = "2.5.0"

[build-dependencies]
prost-build = "0.12.3"
