[package]
name = "otptool"
version = "0.1.2"
edition = "2021"
authors = ["Denis Hananein"]
description = "Simple tool to help you migrate your OTP secrets from Google Authenticator to another app."
license = "MIT"
homepage = "https://github.com/zloylos/otptool"


[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.15", features = ["derive"] }
data-encoding = "2.6.0"
image = "0.25.2"
prost = "0.13.1"
rqrr = "0.7.1"
url = "2.5.2"

ahash = "=0.8.11"

[build-dependencies]
prost-build = "0.13.1"
